--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=${DB_ROOT_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
+
+jwt.secret=${JWT_SECRET}
+jwt.expired=3600000
