changes before mongodb migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:${DBMS_NAME}://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.url=jdbc:${DBMS_NAME}://${DB_HOST}:${DB_PORT}/${DB_NAME}?jdbcCompliantTruncation=false
 spring.datasource.driver-class-name=${DB_DRIVER}
 spring.datasource.username=${DB_ROOT}
 spring.datasource.password=${DB_ROOT_PASSWORD}
@@ -10,3 +10,4 @@ spring.jpa.hibernate.ddl-auto=none
 jwt.secret=${JWT_SECRET}
 #In millis
 jwt.expired=3600000
+jackson.serialization.write-dates-as-timestamps = false
