--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
-spring.datasource.url=jdbc:${DBMS_NAME}://${DB_HOST}:${DB_PORT}/${DB_NAME}?jdbcCompliantTruncation=false
-spring.datasource.driver-class-name=${DB_DRIVER}
-spring.datasource.username=${DB_ROOT}
-spring.datasource.password=${DB_ROOT_PASSWORD}
+#spring.datasource.url=jdbc:${DBMS_NAME}://${DB_HOST}:${DB_PORT}/${DB_NAME}?jdbcCompliantTruncation=false
+#spring.datasource.driver-class-name=${DB_DRIVER}
+#spring.datasource.username=${DB_ROOT}
+#spring.datasource.password=${DB_ROOT_PASSWORD}
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=none
+spring.data.mongodb.host=${DB_HOST}
+spring.data.mongodb.port=${DB_PORT}
+spring.data.mongodb.database=${DB_NAME}
+#spring.data.mongodb.username=${DB_USERNAME}
+#spring.data.mongodb.password=${DB_PASSWORD}
+
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.show-sql=false
+#spring.jpa.hibernate.ddl-auto=none
 
 jwt.secret=${JWT_SECRET}
 #In millis
