add /patients mapping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@
 #spring.datasource.username=${DB_ROOT}
 #spring.datasource.password=${DB_ROOT_PASSWORD}
 
+database.hostname=${DB_HOST}
+database.port=${DB_PORT}
+database.name=${DB_NAME}
+
 spring.data.mongodb.host=${DB_HOST}
 spring.data.mongodb.port=${DB_PORT}
 spring.data.mongodb.database=${DB_NAME}
