--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ database.hostname=${DB_HOST}
 database.port=${DB_PORT}
 database.name=${DB_NAME}
 
+springdoc.swagger-ui.path=/docs
+
 spring.data.mongodb.host=${DB_HOST}
 spring.data.mongodb.port=${DB_PORT}
 spring.data.mongodb.database=${DB_NAME}
