--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,17 @@ services:
       - $DB_PORT:$DB_PORT
     restart: unless-stopped
 
+  backend:
+    build: .
+    env_file:
+      - .env
+    depends_on:
+      - mongodb
+    links:
+      - mongodb
+    ports:
+      - $SERVER_PORT:$SERVER_PORT
+
 volumes:
   my-db:
   mongodb:
